<resources>
    <string name="app_name">Anti-nCoV</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="notification_title">Temperature Taking</string>
    <string name="notification_desc">Remember to report your temperature!</string>
    <string name="action_register">Register</string>
    <string name="register_ui_title">One Step Away From Your Account</string>
    <string name="register_ui_subtitle">We just need a few more details from you.</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_class">Mentor Class</string>
    <string name="attach_profile">Attach Profile Picture</string>
    <string name="create_account">Create Account</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_report">Temperature Reporting</string>
    <string name="temperature_desc">Please submit your temperature twice a day</string>
    <string name="submit">Submit</string>
    <string name="news">News</string>
    <string name="travel_plans">Travel Declaration</string>
    <string name="travel_ui_title">Travel Declaration</string>
    <string name="travel_ui_subtitle">Please update us if you have been out of Singapore recently.</string>
    <string name="prompt_country">Destination Country</string>
    <string name="prompt_destination_city">City</string>
    <string name="prompt_start_date">Start Date of Travel</string>
    <string name="prompt_end_date">End Date of Travel</string>
    <string name="action_settings">Settings</string>
    <string name="action_identity">Identity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="general">General</string>
    <string name="notifications">Enable Notifications</string>
    <string name="night_mode">Night mode enabled</string>
    <string name="settings_key_dark_mode">dark-mode</string>
    <string name="settings_key_notifications">notifications</string>
    <string name="profile_ui_title">Your Profile</string>
    <string name="update_account">Update Account</string>
    <string name="profile_ui_desc">This is your electronic identification.</string>
    <string name="logout">Logout</string>
    <string name="name_placeholder">John Doe (403)</string>
    <string name="email_placeholder">h191000@nushigh.edu.sg</string>
    <string name="loading_desc">We\'re fetching your news :)</string>
    <string name="loading_error_desc">There was an error while fetching the news :(</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_qn">Forgot Password?</string>
    <string name="forgot_password_desc">Enter your email below and we\'ll send you a password reset link</string>
    <string name="request_reset">Request Reset Link</string>
    <string name="phpc">PHPC</string>
    <string name="turn_on_location">Please turn on Location Services for better experience</string>
    <string name="ok">OK</string>
    <string name="location_services">Location Services</string>
    <string name="phpc_full">Public Health Preparedness Clinics (PHPCs)</string>
    <string name="phpc_desc">These clinics will provide special subsidies for Singapore Citizens and Permanent Residents diagnosed with respiratory illnesses</string>
</resources>
